Rename template project to OwlCore.Nomad.Kubo.PeerSwarm

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,5 +25,5 @@ jobs:
       run: dotnet build --no-restore -p:Configuration=Release
 
     - name: Publish to NuGet
-      run: dotnet nuget push "/home/runner/work/OwlCore.Template/OwlCore.Template/src/bin/Release/OwlCore.Template.*.*.*.nupkg" --skip-duplicate --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push "/home/runner/work/OwlCore.Nomad.Kubo.PeerSwarm/OwlCore.Nomad.Kubo.PeerSwarm/src/bin/Release/OwlCore.Nomad.Kubo.PeerSwarm.*.*.*.nupkg" --skip-duplicate --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json
       
