--- a/src/OwlCore.Nomad.Kubo.PeerSwarm.csproj
+++ b/src/OwlCore.Nomad.Kubo.PeerSwarm.csproj
@@ -58,7 +58,6 @@ Initial release of OwlCore.Nomad.Kubo.PeerSwarm.
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.2" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-		<PackageReference Include="OwlCore.Nomad.Kubo" Version="0.14.1" />
 		<PackageReference Include="PolySharp" Version="1.15.0">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
@@ -71,5 +70,9 @@ Initial release of OwlCore.Nomad.Kubo.PeerSwarm.
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\ocnomadkubo\src\OwlCore.Nomad.Kubo.csproj" />
 	</ItemGroup>
 </Project>
